--- a/system/www/visualisation/tree.html
+++ b/system/www/visualisation/tree.html
@@ -88,6 +88,7 @@ function update(source) {
   var nodeEnter = node.enter().append("svg:g")
       .attr("class", "node")
       .attr("transform", function(d) { return "translate(" + source.y0 + "," + source.x0 + ")"; })
+       .on("contextmenu", function(d) { window.open(d.link, "Search", "width=800, height=600, scrollbars=yes"); })
        .on("click", function(d) { toggle(d); update(d); });
 
   nodeEnter.append("svg:circle")
