--- a/system/www/visualisation/tree.html
+++ b/system/www/visualisation/tree.html
@@ -29,7 +29,7 @@ path.link {
   <body>
     <div id="body">
       <div id="footer">
-        DCAT-AP Mappings (S)
+        DCAT-AP Mappings (T)
         <div class="hint">click or option-click to expand or collapse (d3.layout.tree)</div>
       </div>
     <script type="text/javascript">
