Context is now okay, SDMX properties are copied across.

--- a/system/www/visualisation/tree.html
+++ b/system/www/visualisation/tree.html
@@ -29,8 +29,8 @@ path.link {
   <body>
     <div id="body">
       <div id="footer">
-        DCAT-AP Mappings (T)
-        <div class="hint">click or option-click to expand or collapse (d3.layout.tree)</div>
+        DCAT-AP Mappings
+        <div class="hint">click or option-click to toggle sub-tree view (d3.layout.tree), context menu will search for the identifier or string (separate window)</div>
       </div>
     <script type="text/javascript">
 
