--- a/system/www/visualisation/tree.html
+++ b/system/www/visualisation/tree.html
@@ -30,7 +30,7 @@ path.link {
     <div id="body">
       <div id="footer">
         DCAT-AP Mappings
-        <div class="hint">click or option-click to toggle sub-tree view (d3.layout.tree), context menu will search for the identifier or string (separate window)</div>
+        <div class="hint">click or option-click to toggle sub-tree view (d3.layout.tree), double click will search for the identifier or string (separate window)</div>
       </div>
     <script type="text/javascript">
 
