--- a/system/www/visualisation/cvtree.html
+++ b/system/www/visualisation/cvtree.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Core Data Model Directory</title>
+  <title>Core Data Model Mapping Directory</title>
   <link type="text/css" rel="stylesheet" href="tree_files/style.css">
   <script type="text/javascript" src="tree_files/d3_002.js"></script>
   <script type="text/javascript" src="tree_files/d3.js"></script>
@@ -37,7 +37,7 @@ path.link {
       <img src="/vdm/images/semic_logo.png" alt="SEMIC logo" width="90" height="90" />
     </a>
   </div>
-  <h1><a href="/vdm/" color="white">Core Data Model Directory</a></h1>
+  <h1><a href="/vdm/" color="white">Core Data Model Mapping Directory</a></h1>
 </header>
 
 <section id="picture">
