Update to picture.

--- a/system/www/visualisation/tree.html
+++ b/system/www/visualisation/tree.html
@@ -37,7 +37,7 @@ path.link {
       <img src="/vdm/images/semic_logo.png" alt="SEMIC logo" width="90" height="90" />
     </a>
   </div>
-  <h1><a href="/vdm/" color="white">Core Data Model Mappings Directory</a></h1>
+  <h1><a href="/vdm/" color="white">Core Data Model Mapping Directory</a></h1>
 </header>
 
 <section id="picture">
