Outstanding updates for last problems spotted by Bert.

--- a/system/www/visualisation/cvtree.html
+++ b/system/www/visualisation/cvtree.html
@@ -33,7 +33,7 @@ path.link {
 
 <header>
   <div class="logo">
-    <a href="https://www.semic.eu">
+    <a href="https://mdr.semic.eu">
       <img src="/vdm/images/semic_logo.png" alt="SEMIC logo" width="90" height="90" />
     </a>
   </div>
